--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           echo "${{ secrets.HARBOR_PASS }}" | docker login \
             ${{ secrets.HARBOR_URL }} \
-            -u ${{ secrets.HARBOR_USER }} \
+            -u "${{ secrets.HARBOR_USER }}" \
             --password-stdin
 
       - name: Build & push image
