--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,7 @@ jobs:
           git clone https://$GH_TOKEN@github.com/${{ secrets.GITOPS_REPO }}.git
           cd sample-app-gitops
           sed -i "s/tag:.*/tag: $IMAGE_TAG/" environments/staging/values.yaml
+          sed -i "s/tag:.*/tag: $IMAGE_TAG/" environments/production/values.yaml
           git config user.name "github-actions"
           git config user.email "ci@company.com"
           git commit -am "deploy(staging): sample-app $IMAGE_TAG"
